# awesome-dynex

./: .gitignore  README.md  pyproject.toml
advanced_applications/: QuantumProteinFolding.ipynb  QuantumSatellite.ipynb  QuantumSudoku.ipynb  QuantumnQueenProblem.ipynb  README.md
basics/: README.md  beginners_guide_example_MIS.ipynb  beginners_guide_example_QUBO.ipynb  beginners_guide_example_anti_crossing_clique.ipynb  beginners_guide_example_bqm.ipynb  beginners_guide_example_bqm_k4_complete_graph.ipynb  beginners_guide_example_logic_gates.ipynb  beginners_guide_example_random_nae3sat.ipynb
benchmarks/: G70_dynex.ipynb  QuantumVolume.ipynb  README.MD  XEB-10x10.ipynb  XEB-4x4.ipynb  all_measurements.txt  g70solutionvalidator.ipynb  maxcut_record.ipynb
machine_learning/: Dynex-Full-QRBM.ipynb  Dynex_Scikit-Learn_Plugin.ipynb  Example_SVM_pytorch.ipynb  README.md  example_dynex_scikit-learn_plugin.ipynb  example_neuromorphic_torch_layers.ipynb  example_pytorch.ipynb  example_quantum_boltzmann_machine_QBM.ipynb  example_support_vector_machine.ipynb
misc/: Dynex_Grover_Search.ipynb  Dynex_Q_Score.ipynb  Medium_Image_Classification.ipynb  QCEB_testnet.ipynb  README.md  example_collaborative_filtering_CFQIRBM.ipynb  example_feature_selection_titanic_survivals.ipynb  example_integer_factorisation.ipynb  example_neuromorphic_torch_layers_1_.ipynb  example_placement_of_charging_stations.ipynb  example_rna_folding.ipynb  formatted_titanic.csv  molecule_screening.ipynb
optimization/: Dynex_Portfolio_Optimisation.ipynb  README.md  TrafficOptimizationCQMBUG.ipynb  aircraft-loading-optim.ipynb  quantum_BILP.ipynb  (+6 more)
(+40 files in other folders)
